tests/e2e/not_allowed/name6.error
Error: syntax error in story at line 1, column 2

1|    a//a = 1
       ^

E0007: Missing value after `=`
